--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#caja {
+  width: 400px;
+  height: 200px;
+  border: 5px solid #ffffff;
+  background-color: lightblue;
+  color: #444;
+  text-align: center;
+  line-height: 190px;
+}
